# tikv

./: .codecov.yml  .dockerignore  .gitattributes  .gitignore  .travis.yml  AGENTS.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_COMMENT_STYLE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.lbak  Cargo.toml  DNM.md  Dockerfile  Dockerfile.FIPS  Dockerfile.dev  Dockerfile.test  GOVERNANCE.md  HACKED_OWNERS  HACKED_OWNERS_ALIASES  HISTORY.md  Jenkinsfile  MAINTAINERS.md  Makefile  OWNERS  OWNERS_ALIASES  PERFORMANCE_CRITICAL_PATH.md  README.md  ROADMAP.md  RUST_VERSION  SECURITY.md  USAGE.md  a.out  bors.toml  build.rs  build.sh  bump.bench  (+29 more)
cmd/: Cargo.toml  build.rs
cmd/src/: config.rs  dump.rs  lib.rs  metrics_flusher.rs  proxy.rs  server.rs  setup.rs  signal_handler.rs
cmd/tikv-agent/: Cargo.toml
cmd/tikv-compactor/: Cargo.toml
cmd/tikv-ctl/: Cargo.toml  build.rs
cmd/tikv-dfsgc/: Cargo.toml
cmd/tikv-phybr/: Cargo.toml  topology.yml
cmd/tikv-server/: Cargo.toml  build.rs
cmd/tls-test/: Cargo.toml  build.rs
components/api_version/: Cargo.toml
components/art-rowex/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
components/backup/: Cargo.toml
components/backup-stream/: Cargo.toml
components/batch-system/: Cargo.toml
components/br-stream/: Cargo.toml
components/br_parquet_exporter/: Cargo.toml  test
components/causal_ts/: Cargo.toml
components/cdc/: Cargo.toml
components/cloud/: Cargo.toml
fuzz/: .gitignore  Cargo.toml  README.md  cli.rs  fuzzer_build.rs
fuzz/fuzz_targets/: codec_bytes.rs  codec_number.rs
fuzz/fuzzer-afl/: Cargo.toml  template.rs
fuzz/fuzzer-honggfuzz/: .gitignore  Cargo.toml  template.rs
fuzz/fuzzer-libfuzzer/: .gitignore  Cargo.toml  template.rs
fuzz/src/: lib.rs
fuzz/targets/: Cargo.toml  framework.rs  mod.rs  util.rs
gen-proxy-ffi/: Cargo.toml  bin.rs
gen-proxy-ffi/src/: lib.rs
gen_ffi_interfaces/: Cargo.toml
gen_ffi_interfaces/src/: main.rs
mock-engine-store/: Cargo.toml
mock-engine-store/src/: config.rs  lib.rs
new-mock-engine-store/: Cargo.toml
new-mock-engine-store/src/: config.rs  lib.rs  mock_cluster.rs  mock_page_storage.rs  mock_store.rs  node.rs  server.rs  transport_simulate.rs
proxy_ffi/: Cargo.toml
proxy_ffi/src/: basic_ffi_impls.rs  domain_impls.rs  engine_store_helper_impls.rs  interfaces.rs  lib.rs  raftstore_proxy.rs
proxy_server/: Cargo.toml
proxy_server/src/: config.rs  engine.rs  hacked_lock_mgr.rs  lib.rs  proxy.rs  run.rs  setup.rs  status_server.rs  util.rs
proxy_tests/: Cargo.toml
proxy_tests/proxy/: config.rs  engine.rs  fast_add_peer.rs  ffi.rs  flashback.rs  ingest.rs  mock.rs  mod.rs  normal.rs  proxy.rs  region.rs  replica_read.rs  server_cluster_test.rs  snapshot.rs  store.rs  tablet_snapshot.rs  write.rs
raftstore-proxy/: Cargo.toml
raftstore-proxy-main/: Cargo.toml
raftstore-proxy-main/src/: main.rs
raftstore-proxy/src/: lib.rs
src/: Cargo.toml  OWNERS  config.rs  debug.rs  into_other.rs  lib.rs  main.rs  metrics.rs  read_pool.rs
src/binutil/: mod.rs  server.rs  setup.rs  signal_handler.rs
src/config/: OWNERS  config_manager.rs  configurable.rs  coprocessor.rs  errors.rs  gc_worker.rs  mod.rs  raftstore.rs  read_pool.rs  rocksdb.rs  server.rs  storage.rs  test-custom.toml  test-default.toml
src/coprocessor/: aggregate.rs  cache.rs  checksum.rs  config.rs  config_manager.rs  dag.rs  data_type.rs  endpoint.rs  error.rs  local_metrics.rs  macros.rs  metrics.rs  mod.rs  read_pool_impl.rs  readpool_context.rs  readpool_impl.rs  service.rs  time_limiter.rs  tracker.rs  util.rs
src/coprocessor_v2/: OWNERS  config.rs  endpoint.rs  mod.rs  plugin_manager.rs  plugin_registry.rs  raw_storage_impl.rs
src/coprv2/: endpoint.rs  mod.rs
src/engine/: mod.rs  util.rs
src/fuzz/: Cargo.toml
src/import/: client.rs  common.rs  config.rs  duplicate_detect.rs  engine.rs  errors.rs  import.rs  import_mode.rs  ingest.rs  kv_importer.rs  kv_server.rs  kv_service.rs  metrics.rs  mod.rs  prepare.rs  raft_applier.rs  raft_writer.rs  region.rs  server.rs  service.rs  speed_limiter.rs  sst_importer.rs  sst_service.rs  sst_stream.rs  stream.rs  test_helpers.rs  tests.rs  util.rs  utils.rs
src/kvserver/: mod.rs  server.rs
src/misc_util/: compaction_guard.rs  mod.rs
src/pd/: client.rs  config.rs  errors.rs  etcd.rs  lame_client.rs  metrics.rs  mod.rs  pd.rs  protocol.rs  tso.rs  util.rs  v1client.rs  v2client.rs  worker.rs
src/proto/: errorpb.proto  errorpb.rs  kvrpc.proto  kvrpc.rs  kvrpcpb.proto  kvrpcpb.rs  metapb.proto  metapb.rs  mod.rs  mvccpb.proto  mvccpb.rs  pdpb.proto  pdpb.rs  raft_cmdpb.proto  raft_cmdpb.rs  raft_serverpb.proto  raft_serverpb.rs  raftpb.proto  raftpb.rs
src/raft/: codec.rs  errors.rs  log.rs  log_unstable.rs  mod.rs  progress.rs  raft.rs  raft_log.rs  raw_node.rs  read_only.rs  status.rs  storage.rs
src/raftengine/: config.rs  engine.rs  log_batch.rs  mem_entries.rs  memtable.rs  metrics.rs  mod.rs  pipe_log.rs  util.rs
src/raftserver/: bench.rs  conn.rs  errors.rs  handler.rs  mod.rs  run.rs  server.rs
src/raftstore/: errors.rs  mod.rs  router.rs
src/readpool/: config.rs  errors.rs  mod.rs  pool.rs
src/rpc/: kv_dispatch.rs  mod.rs
src/server/: OWNERS  actor.rs  client.rs  config.rs  conn.rs  conn_loop.rs  coprocessor.rs  debug.rs  debug2.rs  debug_service.rs  engine_factory.rs  engine_factory_v2.rs  engine_factoryv2.rs  errors.rs  gc_worker.rs  grpc_service.rs  handle.rs  http.rs  http_client.rs  http_handler.rs  http_server.rs  http_transport.rs  kv.rs  load_statistics.rs  metrics.rs  mod.rs  network_monitor.rs  node.rs  proxy.rs  raft_client.rs  raft_client2.rs  raft_send.rs  raft_server.rs  raftkv.rs  reset_to_version.rs  resolve.rs  server.rs  service_event.rs  snap.rs  snapshot_manager.rs  (+6 more)
src/storage/: OWNERS  commands.rs  config.rs  config_manager.rs  kv.rs  (+18 more)
tests/: .disk_latency_inspector.tmp  Cargo.toml  failpoints.rs  integrations.rs  last_tikv.toml  log  test_raft.rs  test_raft_flow_control.rs  test_raft_paper.rs  test_raft_snap.rs  test_raw_node.rs  test_transport.rs  tests.rs  util.rs
(+4419 files in other folders)
