[patch.crates-io]
prometheus = { git = "https://github.com/solotzg/rust-prometheus.git", rev = "b4fe98a06a58d29f9b9987a0d7186f6ed5230193" }

# TODO: remove this when new raft-rs is published.
raft = { git = "https://github.com/tikv/raft-rs", branch = "master" }
raft-proto = { git = "https://github.com/tikv/raft-rs", branch = "master" }
protobuf = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }

# TODO: remove this replacement after rusoto_s3 truly supports virtual-host style (https://github.com/rusoto/rusoto/pull/1823).
rusoto_core = { git = "https://github.com/tikv/rusoto", branch = "gh1482-s3-addr-styles" }
rusoto_credential = { git = "https://github.com/tikv/rusoto", branch = "gh1482-s3-addr-styles" }
rusoto_kms = { git = "https://github.com/tikv/rusoto", branch = "gh1482-s3-addr-styles" }
rusoto_mock = { git = "https://github.com/tikv/rusoto", branch = "gh1482-s3-addr-styles" }
rusoto_s3 = { git = "https://github.com/tikv/rusoto", branch = "gh1482-s3-addr-styles" }
rusoto_sts = { git = "https://github.com/tikv/rusoto", branch = "gh1482-s3-addr-styles" }

snappy-sys = { git = "https://github.com/busyjay/rust-snappy.git", branch = "static-link" }

# remove this when https://github.com/danburkert/fs2-rs/pull/42 is merged.
fs2 = { git = "https://github.com/tabokie/fs2-rs", branch = "tikv" }

# Remove this when a new version is release. We need to solve rust-lang/cmake-rs#143.
cmake = { git = "https://github.com/rust-lang/cmake-rs" }

[workspace]
members = [
  "proxy_tests",
  "raftstore-proxy",
  "tests",
  "gen-proxy-ffi",
]
default-members = ["raftstore-proxy"]

[workspace.dependencies]
api_version = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
aws = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
azure = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
backup = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b", default-features = false }
backup-stream = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b", default-features = false }
batch-system = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
case_macros = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
causal_ts = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
cdc = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b", default-features = false }
cloud = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
codec = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
collections = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
concurrency_manager = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
coprocessor_plugin_api = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
encryption = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
encryption_export = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
engine_panic = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
engine_rocks = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
engine_rocks_helper = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
engine_test = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b", default-features = false }
engine_traits = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
engine_traits_tests = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b", default-features = false }
error_code = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
external_storage = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
external_storage_export = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
file_system = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
gcp = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
into_other = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
keys = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
log_wrappers = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
memory_trace_macros = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
online_config = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
panic_hook = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
pd_client = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
profiler = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
raft_log_engine = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
raftstore = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b", default-features = false }
raftstore_v2 = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b", default-features = false }
resolved_ts = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
resource_metering = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
security = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
server = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
snap_recovery = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
sst_importer = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
test_backup = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
test_coprocessor = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b", default-features = false }
example_coprocessor_plugin = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
test_pd = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
test_pd_client = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
test_raftstore = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b", default-features = false }
test_sst_importer = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
test_storage = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b", default-features = false }
test_util = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
tidb_query_aggr = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
tidb_query_codegen = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
tidb_query_common = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
tidb_query_datatype = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
tidb_query_executors = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
tidb_query_expr = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
tikv = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b", default-features = false }
tikv_alloc = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
tikv_kv = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b", default-features = false }
tikv_util = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
tipb_helper = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
tracker = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
txn_types = { git = "https://github.com/tikv/tikv.git", rev = "0f5058ebcc489bc28f997b93765862d79312b" }
# External libs
grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }

# TiFlash libs
engine_store_ffi = { path = "engine_store_ffi", default-features = false }
new-mock-engine-store = { path = "new-mock-engine-store", default-features = false }
proxy_server = { path = "proxy_server", default-features = false }
engine_tiflash = { path = "engine_tiflash", default-features = false }

[profile.dev.package.grpcio-sys]
debug = false
opt-level = 1

[profile.dev.package.librocksdb_sys]
debug = false
opt-level = 1

[profile.dev.package.libtitan_sys]
debug = false
opt-level = 1

[profile.dev.package.tests]
debug = 1
opt-level = 1

[profile.dev]
opt-level = 0
debug = 0
codegen-units = 4
lto = false
incremental = true
panic = 'unwind'
debug-assertions = true
overflow-checks = false
rpath = false

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
lto = "thin"
incremental = false
panic = 'unwind'
debug-assertions = false
overflow-checks = false
rpath = false

[profile.test]
opt-level = 0
debug = 0
codegen-units = 16
lto = false
incremental = true
debug-assertions = true
overflow-checks = true
rpath = false

# The benchmark profile is identical to release, except that lto = false
[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false
